--- a/src/components/Btn1.scss
+++ b/src/components/Btn1.scss
@@ -1,25 +1,43 @@
-$blue: #228be6; // 변수선언
+$blue: #228be6;
 
-.Btn1 {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    font-weight: bold;
-    outline: none;
-    border-radius: 4px;
-    border: none;
-    cursor: pointer;
+.Button {
+  display: inline-flex;
+  color: white;
+  font-weight: bold;
+  outline: none;
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
+  margin: 0.4rem;
 
+  // 사이즈 관리
+  &.large {
+    height: 3rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    font-size: 1.25rem;
+  }
+
+  &.medium {
     height: 2.25rem;
     padding-left: 1rem;
     padding-right: 1rem;
     font-size: 1rem;
-    background: $blue;
-    &:hover {
-        background: lighten($color: $blue, $amount: 10%);
-    }
-    &:active {
-        background: darken($color: $blue, $amount: 10%);
-    }
+  }
+
+  &.small {
+    height: 1.75rem;
+    font-size: 0.875rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  background: $blue;
+  &:hover {
+    background: lighten($blue, 10%);
+  }
+
+  &:active {
+    background: darken($blue, 10%);
+  }
 }
